2019-1/221/users/4099/executions/1766_1583.log
== SUBMITION (2019-05-28 09:28:50) 
-- CODE:

numero = imput()

i = 0
n.num = 0
while(i < len(numero)):
	n.num = n.num + numero[i : i+3] + "."
	i = i + 3

	print(n.num[:-1])
-- EXECUTION TIME:
0.152658
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1766/1583/main.py", line 2, in <module>
    numero = imput()
NameError: name 'imput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 09:28:59) 
-- CODE:

numero = imput()

i = 0
n.num = 0
while(i < len(numero)):
	n.num = n.num + numero[i , i+3] + "."
	i = i + 3

	print(n.num[:-1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numero = imput()
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 09:29:07) 
-- CODE:

numero = input()

i = 0
n.num = 0
while(i < len(numero)):
	n.num = n.num + numero[i , i+3] + "."
	i = i + 3

	print(n.num[:-1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    n.num = 0
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 09:29:36) 
-- CODE:

numero = input()

i = 0
n_num = 0
while(i < len(numero)):
	n_num = n_num + numero[i , i+3] + "."
	i = i + 3

	print(n_num[:-1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n_num = n_num + numero[i , i+3] + "."
TypeError: string indices must be integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 09:30:47) 
-- CODE:

numero = input()

i = 0
n_num = 0
while(i < len(numero)):
	n_num = n_num + numero[i  i+3] + "."
	i = i + 3

	print(n_num[:-1])
-- ERROR:
File "XXXX", line 7
    n_num = n_num + numero[i  i+3] + "."
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 09:30:55) 
-- CODE:

numero = input()

i = 0
n_num = 0
while(i < len(numero)):
	n_num = n_num + numero[i : i+3] + "."
	i = i + 3

	print(n_num[:-1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n_num = n_num + numero[i : i+3] + "."
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 09:34:12) 
-- CODE:

numero = input()

i = 0
novo_num = ""
while(i < len(numero)):
	novo_num = novo_num + numero[i : i+3] + "."
	i = i + 3

	print(novo_num[:-1])
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 09:34:26) 
-- CODE:

numero = input()

i = 0
novo_num = ""
while(i < len(numero)):
	novo_num = novo_num + numero[i : i+3] + "."
	i = i + 3

	print(novo_num[:-1])
-- EXECUTION TIME:
0.114173
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123
123.456
123.456.789
123.456.789.000
123.456.789.000.987
123.456.789.000.987.654
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987
987.654
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 09:35:18) 
-- CODE:

numero = input()

i = 0
novo_num = ""
while(i < len(numero)):
	novo_num = novo_num + numero[i : i+3] + "."
	i = i + 3

	print(novo_num[:-1])
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 09:36:29) 
-- CODE:
numero = input()

i = 0
novo_num = ""
while(i < len(numero)):
	novo_num = novo_num + numero[i : i+3] + "."
	i = i + 3

	print(novo_num[:-1])
-- EXECUTION TIME:
0.220553
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123
123.456
123.456.789
123.456.789.000
123.456.789.000.987
123.456.789.000.987.654
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987
987.654
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 09:37:01) 
-- CODE:
numero = input()

i = 0
novo_num = ""
while(i < len(numero))
	novo_num = novo_num + numero[i : i+3] + "."
	i = i + 3

	print(novo_num[:-1])
-- ERROR:
File "XXXX", line 5
    while(i < len(numero))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 09:37:28) 
-- CODE:
numero = input()

i = 0
novo_num = ""
while(i < len(numero)):
	novo_num = novo_num + numero[i : i+3] + "."
	i = i + 3

print(novo_num[:-1])
-- EXECUTION TIME:
0.116012
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
